--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello, I am Manojkumar Dhamodharan</h1>
     <h3>Email : <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">manojkumar.dhamothaaran@gmail.com</a></h3>
-    <h3Devops Engineer - Azure </h3>
+    <h3> Devops Engineer - Azure </h3>
     <img src="./images/Photo_BG_White.jpg" width="200" height="200" alt="My profile picture"/>
     <h3>Carrer Objective</h3>
     <p>To pursue a challenging career in the organization by effectively using my skills & knowledge and be a part of team that 
